# HNN

./: .gitignore  MNIST_classification.ipynb  MNIST_classification2.ipynb  Pattern_recognition.ipynb  Readme.md  hANN.ipynb  hnn.py  hnn_utils.py  plots_utils.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: MNIST_classification-checkpoint.ipynb  MNIST_classification2-checkpoint.ipynb  Pattern_recognition-checkpoint.ipynb  anisotropic_hnn-checkpoint.py  hANN-checkpoint.ipynb
notebooks/: Pattern_recognition.ipynb  hANN.ipynb
src/: hnn.py  test_homogeneity.py
src/homogeneous_nn/: hnn.py  hnn_utils.py  plots_utils.py
